[gd_scene load_steps=16 format=3 uid="uid://cell_stage"]

[ext_resource type="Script" path="res://scripts/cell_stage/cell_stage_manager.gd" id="1"]
[ext_resource type="Script" path="res://scripts/cell_stage/player_cell.gd" id="2"]
[ext_resource type="Script" path="res://scripts/cell_stage/ambient_particles.gd" id="3"]
[ext_resource type="PackedScene" path="res://scenes/crispr_editor.tscn" id="4"]
[ext_resource type="Shader" path="res://shaders/ocean_background.gdshader" id="5"]
[ext_resource type="Script" path="res://scripts/cell_stage/test_tube_hud.gd" id="6"]
[ext_resource type="Script" path="res://scripts/cell_stage/evolution_ui.gd" id="7"]
[ext_resource type="Shader" path="res://shaders/sensory_view.gdshader" id="8"]
[ext_resource type="Script" path="res://scripts/cell_stage/sensory_manager.gd" id="9"]
[ext_resource type="Script" path="res://scripts/cell_stage/organism_card.gd" id="10"]
[ext_resource type="Script" path="res://scripts/cell_stage/loot_notifier.gd" id="11"]
[ext_resource type="Script" path="res://scripts/cell_stage/micro_life.gd" id="12"]
[ext_resource type="Script" path="res://scripts/cell_stage/observer_notes.gd" id="13"]
[ext_resource type="Script" path="res://scripts/cell_stage/creature_viewer.gd" id="14"]
[ext_resource type="Script" path="res://scripts/cell_stage/camera_shake.gd" id="15"]

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_toxin"]
radius = 80.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sensory"]
shader = ExtResource("8")
shader_parameter/visibility_range = 0.3
shader_parameter/color_perception = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg"]
shader = ExtResource("5")
shader_parameter/time_scale = 1.0
shader_parameter/deep_color = Color(0.01, 0.03, 0.06, 1)
shader_parameter/vent_color = Color(0.15, 0.06, 0.02, 1)
shader_parameter/particle_color = Color(0.2, 0.5, 0.8, 0.3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_left_panel"]
bg_color = Color(0.015, 0.025, 0.04, 1.0)
border_width_right = 2
border_color = Color(0.12, 0.25, 0.35, 0.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_right_panel"]
bg_color = Color(0.015, 0.025, 0.04, 1.0)
border_width_left = 2
border_color = Color(0.12, 0.25, 0.35, 0.7)

[node name="CellStage" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
material = SubResource("ShaderMaterial_bg")
color = Color(1, 1, 1, 1)

[node name="AmbientParticles" type="Node2D" parent="."]
script = ExtResource("3")

[node name="MicroLife" type="Node2D" parent="."]
script = ExtResource("12")

[node name="PlayerCell" type="CharacterBody2D" parent="."]
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCell"]
shape = SubResource("CircleShape2D_player")

[node name="ToxinArea" type="Area2D" parent="PlayerCell"]

[node name="ToxinShape" type="CollisionShape2D" parent="PlayerCell/ToxinArea"]
shape = SubResource("CircleShape2D_toxin")

[node name="Camera2D" type="Camera2D" parent="PlayerCell"]
zoom = Vector2(1.6, 1.6)
script = ExtResource("15")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 5

[node name="ThreePaneLayout" type="HBoxContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPane" type="Panel" parent="HUD/ThreePaneLayout"]
custom_minimum_size = Vector2(280, 0)
size_flags_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_left_panel")

[node name="LeftVBox" type="VBoxContainer" parent="HUD/ThreePaneLayout/LeftPane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="OrganismCard" type="Control" parent="HUD/ThreePaneLayout/LeftPane/LeftVBox"]
custom_minimum_size = Vector2(280, 620)
layout_mode = 2
script = ExtResource("10")

[node name="HelixHUD" type="Control" parent="HUD/ThreePaneLayout/LeftPane/LeftVBox"]
custom_minimum_size = Vector2(280, 460)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("6")

[node name="MiddlePane" type="Control" parent="HUD/ThreePaneLayout"]
custom_minimum_size = Vector2(1320, 0)
size_flags_horizontal = 3
size_flags_stretch_ratio = 70.0
mouse_filter = 2

[node name="TopBar" type="ColorRect" parent="HUD/ThreePaneLayout/MiddlePane"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
color = Color(0.02, 0.05, 0.1, 0.7)

[node name="EnergyLabel" type="Label" parent="HUD/ThreePaneLayout/MiddlePane"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 100.0
offset_bottom = 20.0
text = "ENERGY"
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.3, 0.8, 1.0, 0.8)

[node name="EnergyBar" type="ProgressBar" parent="HUD/ThreePaneLayout/MiddlePane"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 36.0
value = 100.0

[node name="HealthLabel" type="Label" parent="HUD/ThreePaneLayout/MiddlePane"]
layout_mode = 0
offset_left = 20.0
offset_top = 38.0
offset_right = 100.0
offset_bottom = 54.0
text = "HEALTH"
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(1.0, 0.4, 0.3, 0.8)

[node name="HealthBar" type="ProgressBar" parent="HUD/ThreePaneLayout/MiddlePane"]
layout_mode = 0
offset_left = 20.0
offset_top = 54.0
offset_right = 220.0
offset_bottom = 70.0
value = 100.0

[node name="StatsLabel" type="Label" parent="HUD/ThreePaneLayout/MiddlePane"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 15.0
offset_right = -20.0
offset_bottom = 45.0
grow_horizontal = 0
text = "Repros: 0/10 | Organelles: 0/5"
horizontal_alignment = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.3, 0.9, 0.8, 0.9)

[node name="ParasiteLabel" type="Label" parent="HUD/ThreePaneLayout/MiddlePane"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 48.0
offset_right = -20.0
offset_bottom = 68.0
grow_horizontal = 0
text = ""
horizontal_alignment = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.2, 0.3, 0.9)

[node name="FPSLabel" type="Label" parent="HUD/ThreePaneLayout/MiddlePane"]
layout_mode = 0
offset_left = 240.0
offset_top = 4.0
offset_right = 480.0
offset_bottom = 78.0
text = "FPS: 120"
theme_override_font_sizes/font_size = 10
theme_override_colors/font_color = Color(0.5, 0.9, 0.5, 0.8)

[node name="ControlsLabel" type="Label" parent="HUD/ThreePaneLayout/MiddlePane"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 750.0
offset_bottom = -10.0
grow_vertical = 0
text = "WASD: Thrust | Shift: Sprint | LClick: Beam | RClick: Jet | E: Toxin | Q: Reproduce | F: Metabolize | Tab: CRISPR"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.4, 0.7, 0.8, 0.6)

[node name="LootNotifier" type="Control" parent="HUD/ThreePaneLayout/MiddlePane"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 80.0
offset_bottom = 250.0
grow_horizontal = 0
script = ExtResource("11")

[node name="RightPane" type="Panel" parent="HUD/ThreePaneLayout"]
custom_minimum_size = Vector2(320, 0)
size_flags_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_right_panel")

[node name="RightVBox" type="VBoxContainer" parent="HUD/ThreePaneLayout/RightPane"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ObserverNotes" type="Control" parent="HUD/ThreePaneLayout/RightPane/RightVBox"]
custom_minimum_size = Vector2(320, 680)
layout_mode = 2
script = ExtResource("13")

[node name="CreatureViewer" type="Control" parent="HUD/ThreePaneLayout/RightPane/RightVBox"]
custom_minimum_size = Vector2(320, 400)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("14")

[node name="CRISPREditor" parent="." instance=ExtResource("4")]

[node name="EvolutionUI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("7")
